[package]
name = "widgetui"
edition = "2021"
description = "A bevy like widget system for ratatui and crossterm"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheEmeraldBee/widgetui"
version.workspace = true

[workspace]
members = ["tui-helper-proc-macro"]
package.version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
ratatui = "0.26.2"
thiserror = "1.0.61"
tui-helper-proc-macro = { path = "tui-helper-proc-macro", version = "0.0.0" }
