[package]
name = "tui-helper-proc-macro"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true


[dependencies]
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full", "extra-traits"] }
